Ajout SAE25 portfolio S2

--- a/latex/presentation_formation.tex
+++ b/latex/presentation_formation.tex
@@ -1,4 +1,4 @@
-La formation de Bachelor Universitaire de Technologie en Réseaux \& Télécommunications  (BUT R\&T) répond à la demande toujours croissante de compétences dans les secteurs  de l'information et de la communication. Les réseaux informatiques sont au cœur de nombreuses activités dont l'importance pour la vie sociale et économique est chaque jour plus présente : télétravail, communications mobiles, réseaux à très haut débit, transport et accès à l'information. Ces technologies, en pleine évolution, impliquent des objets communicants  de plus en plus répandus tant chez les particuliers que dans les entreprises ({\em Internet des objets}). Elles génèrent d'importants flux de données et posent de nouveaux problèmes de {\em cybersécurité}. La plupart des entreprises déportent tout ou partie de leurs données et traitements vers des {\em data centers} et mobilisent des solutions de {\em cloud computing}. Le déploiement d'infrastructures et de services réseaux ou le suivi de leur évolution sont au cœur de projets d'envergure à gérer et {\em piloter}.  Le BUT R\&T forme en trois ans des techniciens supérieurs capables de comprendre, de mettre en œuvre, de  configurer et de maintenir des équipements et systèmes d'information, tout en assurant leur sécurité physique et logicielle. 
+La formation de Bachelor Universitaire de Technologie en Réseaux \& Télécommunications  (BUT R\&T) répond à la demande toujours croissante de compétences dans les secteurs  des technologies de l'information et de la communication. Les réseaux informatiques sont au cœur de nombreuses activités dont l'importance pour la vie sociale et économique est chaque jour plus présente : télétravail, communications mobiles, réseaux à très haut débit, transport et accès à l'information. Ces technologies, en pleine évolution, impliquent des objets communicants  de plus en plus répandus tant chez les particuliers que dans les entreprises ({\em Internet des objets}). Elles génèrent d'importants flux de données et posent de nouveaux problèmes de {\em cybersécurité}. La plupart des entreprises déportent tout ou partie de leurs données et traitements vers des {\em data centers} et mobilisent des solutions de {\em cloud computing}. Le déploiement d'infrastructures et de services réseaux ou le suivi de leur évolution sont au cœur de projets d'envergure à gérer et {\em piloter}.  Le BUT R\&T forme en trois ans des techniciens supérieurs capables de comprendre, de mettre en œuvre, de  configurer et de maintenir des équipements et systèmes d'information, tout en assurant leur sécurité physique et logicielle. 
 
 \subsection*{Cinq parcours de spécialité}
 La formation repose sur un socle commun de compétences dans les domaines réseaux, informatiques et télécommunications. Ce socle, représentant plus de 80\% de la formation, couvre l'administration des réseaux IP (Internet), la connexion des entreprises et des usagers, la création d'outils et d'applications informatiques pour les réseaux et télécommunications. Il est complété par une spécialisation sous forme de compétences complémentaires dispensées au cours des deux dernières années ; cette spécialisation est à choisir parmi les cinq orientations professionnelles en R\&T : Cybersécurité, Développement système et cloud, Internet des objets et mobilité, Pilotage de projets réseaux, Réseaux opérateurs et multimédia. En plus des compétences scientifiques et techniques, le BUT R\&T met l'accent sur les savoir-être, l'éthique, la capacité à travailler en équipe dans un environnement international et la compréhension des enjeux des technologies modernes.
