--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -33,7 +33,10 @@
 3h & 14h & 12h &  &  & 18\\ 
 \hline \hyperlink{sae:SAÉ24}{\textcolor{saeC}{SAÉ24}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Projet intégratif} \end{tabular} & 
-8h &   & 54h & 23 & 19 & 18\\ 
+8h &   & 54h & 22 & 18 & 17\\ 
+\hline \hyperlink{sae:SAÉ25}{\textcolor{saeC}{SAÉ25}} & 
+\begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
+  &   &   & 1 & 1 & 1\\ 
 \hline \multicolumn{5}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
 \hline \hyperlink{res:R201}{\textcolor{ressourceC}{R201}} & 
