--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -69,6 +69,8 @@
 \input{saes/SAE24_exemple2.tex}
 \input{saes/SAE24_exemple3.tex}
 
+\input{saes/SAE25.tex}
+
 \input{ressources/R201.tex}
 \input{ressources/R202.tex}
 \input{ressources/R203.tex}
