--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -6,7 +6,6 @@
  & \rotatebox[origin=l]{90}{\tiny{Mesurer et caractériser un signal ou un système~}}
  & \rotatebox[origin=l]{90}{\tiny{Mettre en place une solution informatique pour l'entreprise~}}
  & \rotatebox[origin=l]{90}{\tiny{Projet intégratif~}}
- & \rotatebox[origin=l]{90}{\tiny{Portfolio~}}
 
  & \rotatebox[origin=l]{90}{\tiny{Technologie de l'Internet~}}
  & \rotatebox[origin=l]{90}{\tiny{Administration système et fondamentaux de la virtualisation~}}
@@ -29,7 +28,6 @@
  & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ22}{\textcolor{saeC}{SAÉ22}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ23}{\textcolor{saeC}{SAÉ23}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ24}{\textcolor{saeC}{SAÉ24}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ25}{\textcolor{saeC}{SAÉ25}}}
 
  & \rotatebox[origin=r]{90}{~\hyperlink{res:R201}{\textcolor{ressourceC}{R201}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{res:R202}{\textcolor{ressourceC}{R202}}}
@@ -51,91 +49,91 @@
 \multicolumn{21}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
 \textcolor{compCA}{AC0111} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
- &  &  & $\times$ & $\times$
+ &  &  & $\times$
  &  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$\\ 
 \hline 
 \textcolor{compCA}{AC0112} & 
 \begin{tabular}{p{3.8cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
+$\times$ &  &  & $\times$
  &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ &  &  & $\times$ & \\ 
 \hline 
 \textcolor{compCA}{AC0113} & 
 \begin{tabular}{p{3.8cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
+$\times$ &  &  & $\times$
  & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0114} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
+$\times$ &  &  & $\times$
  &  & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0115} & 
 \begin{tabular}{p{3.8cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
+$\times$ &  &  & $\times$
  & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  & \\ 
 \hline 
 \textcolor{compCA}{AC0116} & 
 \begin{tabular}{p{3.8cm}} \tiny{Installer un poste client}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
+$\times$ &  &  & $\times$
  & $\times$ & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \hline 
 \multicolumn{21}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
 \textcolor{compCB}{AC0211} & 
 \begin{tabular}{p{3.8cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
+ & $\times$ &  & $\times$
  &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$\\ 
 \hline 
 \textcolor{compCB}{AC0212} & 
 \begin{tabular}{p{3.8cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
+ & $\times$ &  & $\times$
  &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$\\ 
 \hline 
 \textcolor{compCB}{AC0213} & 
 \begin{tabular}{p{3.8cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
+ & $\times$ &  & $\times$
  & $\times$ &  &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0214} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
- &  &  & $\times$ & $\times$
+ &  &  & $\times$
  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0215} & 
 \begin{tabular}{p{3.8cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
+ & $\times$ &  & $\times$
  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \hline 
 \multicolumn{21}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
 \textcolor{compCC}{AC0311} & 
 \begin{tabular}{p{3.8cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  & $\times$ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
 \hline 
 \textcolor{compCC}{AC0312} & 
 \begin{tabular}{p{3.8cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0313} & 
 \begin{tabular}{p{3.8cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
 \hline 
 \textcolor{compCC}{AC0314} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0315} & 
 \begin{tabular}{p{3.8cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0316} & 
 \begin{tabular}{p{3.8cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
+ &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \hline 
