Ajout d'un module latex avec déport des fonctions traitant de l'export latex des ressources/SAé

--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -34,53 +34,56 @@
 \hline \hyperlink{sae:SAÉ24}{\textcolor{saeC}{SAÉ24}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Projet intégratif} \end{tabular} & 
 8h &   & 54h & 23 & 19 & 18\\ 
+\hline \hyperlink{sae:SAÉ25}{\textcolor{saeC}{SAÉ25}} & 
+\begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
+  &   &   & 1 & 1 & 1\\ 
 \hline \multicolumn{5}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
 \hline \hyperlink{res:R201}{\textcolor{ressourceC}{R201}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Technologie de l'Internet} \end{tabular} & 
-  &   &  &  &  & \\ 
+30h & 30h &  & 19 & 4 & 0\\ 
 \hline \hyperlink{res:R202}{\textcolor{ressourceC}{R202}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Administration système et fondamentaux de la virtualisation} \end{tabular} & 
-30h & 30h &  & 19 & 4 & 0\\ 
+10h & 20h &  & 12 &  & 4\\ 
 \hline \hyperlink{res:R203}{\textcolor{ressourceC}{R203}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Bases des services réseaux} \end{tabular} & 
-10h & 20h &  & 12 &  & 4\\ 
+12h & 18h &  & 12 &  & \\ 
 \hline \hyperlink{res:R204}{\textcolor{ressourceC}{R204}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation à la téléphonie d'entreprise} \end{tabular} & 
-12h & 18h &  & 12 &  & \\ 
+15h & 15h &  & 8 & 4 & 0\\ 
 \hline \hyperlink{res:R205}{\textcolor{ressourceC}{R205}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Signaux et Systèmes pour les transmissions} \end{tabular} & 
-15h & 15h &  & 8 & 4 & 0\\ 
+21h & 15h &  & 2 & 12 & \\ 
 \hline \hyperlink{res:R206}{\textcolor{ressourceC}{R206}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Numérisation de l'information} \end{tabular} & 
-21h & 15h &  & 2 & 12 & \\ 
+12h & 12h &  &  & 10 & \\ 
 \hline \hyperlink{res:R207}{\textcolor{ressourceC}{R207}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Sources de données} \end{tabular} & 
-12h & 12h &  &  & 10 & \\ 
+8h & 12h &  & 0 &  & 10\\ 
 \hline \hyperlink{res:R208}{\textcolor{ressourceC}{R208}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Analyse et traitement de données structurées} \end{tabular} & 
-8h & 12h &  & 0 &  & 10\\ 
+6h & 10h &  &  &  & 10\\ 
 \hline \hyperlink{res:R209}{\textcolor{ressourceC}{R209}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation au développement Web} \end{tabular} & 
-6h & 10h &  &  &  & 10\\ 
+9h & 15h &  & 2 &  & 10\\ 
 \hline \hyperlink{res:R210}{\textcolor{ressourceC}{R210}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Anglais de communication et développement de l'anglais technique} \end{tabular} & 
-9h & 15h &  & 2 &  & 10\\ 
+15h & 30h &  & 3 & 8 & 8\\ 
 \hline \hyperlink{res:R211}{\textcolor{ressourceC}{R211}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Expression-Culture-Communication Professionnelles 2} \end{tabular} & 
-15h & 30h &  & 3 & 8 & 8\\ 
+9h & 21h &  & 3 & 4 & 5\\ 
 \hline \hyperlink{res:R212}{\textcolor{ressourceC}{R212}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Projet Personnel et Professionnel} \end{tabular} & 
-9h & 21h &  & 3 & 4 & 5\\ 
+3h & 12h &  & 2 & 2 & 2\\ 
 \hline \hyperlink{res:R213}{\textcolor{ressourceC}{R213}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Mathématiques des systèmes numériques} \end{tabular} & 
-3h & 12h &  & 2 & 2 & 2\\ 
+24h & 6h &  & 3 & 5 & 5\\ 
 \hline \hyperlink{res:R214}{\textcolor{ressourceC}{R214}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Analyse mathématique des signaux} \end{tabular} & 
-24h & 6h &  & 3 & 5 & 5\\ 
+24h & 6h &  & 3 & 8 & \\ 
 \hline \hline \multicolumn{5}{|l|}{\bfseries Total}
 \\ 
-\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{69} & \textit{57} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 115} & {\bfseries 95} & {\bfseries 90}\\ \hline\multicolumn{5}{l}{~}\\
+\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{47} & \textit{39} & \textit{37}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{69} & \textit{57} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 116} & {\bfseries 96} & {\bfseries 91}\\ \hline\multicolumn{5}{l}{~}\\
 \multicolumn{5}{l}{\bfseries Crédits ECTS}\\
 \hline
 \multicolumn{5}{|l|}{} & RT1 & RT2 & \multicolumn{1}{c|}{RT3} \\
