Modif AC et coefs suite CPN

--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -61,7 +61,7 @@
 \textcolor{compCA}{AC0112} & 
 \begin{tabular}{p{3.8cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
+ &  &  &  &  &  & $\times$ &  &  &  & $\times$ &  & $\times$ &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0113} & 
 \begin{tabular}{p{3.8cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
@@ -71,12 +71,12 @@ $\times$ & $\times$ &  &  &  & $\times$
 \textcolor{compCA}{AC0114} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
+ &  & $\times$ &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0115} & 
 \begin{tabular}{p{3.8cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
+ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0116} & 
 \begin{tabular}{p{3.8cm}} \tiny{Installer un poste client}\end{tabular} & 
@@ -92,18 +92,18 @@ $\times$ & $\times$ &  &  &  & $\times$
 \hline 
 \textcolor{compCB}{AC0212} & 
 \begin{tabular}{p{3.8cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
- &  &  &  &  & $\times$
+ &  &  &  &  & 
  &  &  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & \\ 
 \hline 
 \textcolor{compCB}{AC0213} & 
 \begin{tabular}{p{3.8cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
- & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
+ & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0214} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
- &  &  &  &  & $\times$
- &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
+ &  &  &  &  & 
+ &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0215} & 
 \begin{tabular}{p{3.8cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
@@ -115,7 +115,7 @@ $\times$ & $\times$ &  &  &  & $\times$
 \textcolor{compCC}{AC0311} & 
 \begin{tabular}{p{3.8cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
  &  &  & $\times$ & $\times$ & $\times$
- & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ &  &  & \\ 
+ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0312} & 
 \begin{tabular}{p{3.8cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
@@ -130,7 +130,7 @@ $\times$ & $\times$ &  &  &  & $\times$
 \textcolor{compCC}{AC0314} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
  &  &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  &  &  & $\times$ &  &  &  &  &  & \\ 
+ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0315} & 
 \begin{tabular}{p{3.8cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
