--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -57,7 +57,7 @@
 \textcolor{compCA}{AC0112} & 
 \begin{tabular}{p{3.8cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
 $\times$ &  &  & $\times$ & $\times$
- &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ &  &  & $\times$ & \\ 
+ &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  & $\times$ & \\ 
 \hline 
 \textcolor{compCA}{AC0113} & 
 \begin{tabular}{p{3.8cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
