--- a/latex/presentation_formation.tex
+++ b/latex/presentation_formation.tex
@@ -19,9 +19,12 @@ Ces activités peuvent être élargies, avec une  spécialisation vers :
 
 \medskip
 \begin{itemize}[leftmargin=5ex]
-	\item la coordination de la cybersécurité des systèmes d'information (Cybersécurité) ;
-	\item l'administration de réseaux programmables, pour le Cloud ou le DevOps (DevCloud) ;
-	\item la communication entre objets mobiles et communicants, l'Internet des objets (IOM ) ;
-	\item le pilotage et la direction d'activités réseaux et télécoms (PilPro) ;
-	\item les opérateurs de télécommunication fixe et intégrateurs de solutions de communication pour l'entreprise (ROM).
+	\item La coordination de la cybersécurité des systèmes d'information (Cybersécurité). Cette spécialité regroupe l'ensemble des métiers liés à la sécurité des systèmes d'information, de l'installation d'équipements de sécurité à leur surveillance. Le diplômé du parcours Cybersécurité sera capable d'administrer un système d'information sécurisé, de le superviser, de détecter et de parer aux attaques informatiques. Les diplômés exerceront les métiers de Technicien en cybersécurité, Technicien des réseaux d'entreprises, Technicien réseaux sécurisés, Technicien d'infrastructures sécurisées, Coordinateur cybersécurité des systèmes d'information, Administrateur de solutions de sécurité, Auditeur de sécurité technique, Opérateur analyste SOC (Security Operation Center), Intégrateur de solutions de sécurité, Administrateur Data Center.
+	\item L'administration de réseaux programmables, pour le Cloud ou le DevOps (DevCloud). Les diplômés exerceront les métiers  deTechnicien réseaux cloud, Administrateur cloud, Intégrateur cloud, intégrateur DevOps ,Administrateur Réseaux Programmables, Administrateur Système \& Réseaux (DevOps, NetDevOps), Technicien sécurité des systèmes cloud (DevSecOps), Administrateur de serveurs et de réseaux virtualisés.
+	
+	\item La communication entre objets mobiles et communicants, l'Internet des objets (IOM ). Cette spécialité permettra de maîtriser les technologies de communication entre objets mobiles et communicants : téléphones, véhicules, capteurs de toute nature. Les diplômés exerceront les métiers de Technicien de maintenance exploitation , Technicien de maintenance réseaux mobiles, Technicien télécom, Technicien support réseau mobile, Intégrateur de réseaux mobiles, Superviseur de réseaux mobiles, Technicien support réseau mobile et IoT, Technicien audit liaison sans fil, Intégrateur de système de l’Internet des Objets, Administrateur de solutions web et mobiles, Intégrateur d’applications mobiles.
+	
+	\item Le pilotage et la direction d'activités réseaux et télécoms (PilPro). Cette spécialité permettra de comprendre les technologies des réseaux informatiques et de télécommunications afin de dialoguer avec les différents acteurs d’un projet ou d’un contrat. Elle permettra d’acquérir la capacité d’analyser, de suivre, coordonner puis de piloter les demandes internes et externes des entreprises, organismes privés ou publics, dans le respect des normes techniques et réglementaires de son activité. Les diplômés exerceront les métiers de Responsable d'affaires clients, Conducteur de travaux (cuivre, fibre ou mobile), Technicien avant-vente, Technicien de production, Coordinateur de projet R\&T, Chargé d’études télécoms, Pilote d’activités réseaux et télécoms, Pilote de production réseaux.
+	
+	\item Les opérateurs de télécommunication fixe et intégrateurs de solutions de communication pour l'entreprise (ROM). Cette spécialité forme aux métiers des opérateurs de télécommunication fixe qui fournissent l'accès au réseau pour les entreprises ou les particuliers et aux métiers d'intégrateur de solutions de communication pour l'entreprise. Les diplômés exerceront les métiers de Technicien d’intervention client boucle locale, Technicien support réseaux fixes, Chargé de support technique, Technicien service client SAV, Superviseur ADSL/FTTH, Technicien production et d'intégration de solutions complexes, Technicien déploiement de la fibre optique, Pilote de production, Chargé d'ingénierie réseau structurant, Technicien d’intervention ToIP.
 \end{itemize}
