--- a/latex/pn_formation_ccn.tex
+++ b/latex/pn_formation_ccn.tex
@@ -26,7 +26,7 @@
 \usepackage{xparse}
 \usepackage{enumitem}
 % \usepackage{longtable}
-\usepackage[pdfencoding=unicode, pdfusetitle]{hyperref}
+\usepackage[pdfencoding=unicode, pdfusetitle, colorlinks=true, urlcolor=blue]{hyperref}
 \usepackage{bookmark}
 
 \usepackage{amsmath} % pour les formules de maths
@@ -38,6 +38,7 @@
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{fancyhdr}
 \usepackage{xspace}
+\usepackage{pdfpages}
 
 %\usepackage[french]{babel}
 \usepackage[base]{babel}
@@ -116,16 +117,17 @@ Référentiel de formation}
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\lfoot{ACD R\&T - Référentiel de Formation}
-\rfoot{\thepage}
+
 
 \fancyhf{}
 \renewcommand{\footrulewidth}{1pt}
 \fancypagestyle{BO}{%
   \fancyhf{}%
-  \fancyfoot[L]{\textcopyright~Ministère de l'Enseignement supérieur, de la Recherche et de l'Innovation 2021\\\url{http://www.enseignementsup-recherche.gouv.fr}}
+  \fancyfoot[L]{
+    Bachelor Universitaire de Technologie «Réseaux \& Télécommunications» 1\iere année\\  
+  \textcopyright~Ministère de l'Enseignement supérieur, de la Recherche et de l'Innovation 2021\\\url{http://www.enseignementsup-recherche.gouv.fr}}
   \fancyfoot[C]{~\\}
-  \fancyfoot[R]{~\\Réseaux \& Télécommunications\hspace*{4cm}\thepage}
+  \fancyfoot[R]{~\\\hspace*{4cm}\thepage}
 }
 
 \usepackage[verbose]{newunicodechar}
@@ -149,45 +151,8 @@ Référentiel de formation}
 % \maketitle
 \thispagestyle{empty}
 
-% XXX PAGE DE GARDE EN PDF
-
-\begin{center}
-~\\
-\vskip 3cm
-{\huge
-{\em Bachelor Universitaire de Technologie}
-\vskip 1cm
-Réseaux et Télécommunications
-}
-\vskip 2cm
-{\em Proposition de}
-\vskip 2mm
-{\huge
-Référentiel de formation
-}
-\vskip 2cm
-\includegraphics[height=12mm]{img/logo_IUT_R_T_condense}
-
-\vskip 1cm
-{\Large
-ACD R\&T
-}
-\vskip 5mm
-\today
-
-
-\vskip 2cm
-\begin{boitepagetitre}
-Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de la formation pour les deux premiers semestres (S1 et S2) de l'année universitaire 2021-2022.
-\medskip
-
-Élaboré par les enseignants des départements Réseaux et Télécommunications, sous la direction du groupe de travail constitué de~:
-{\em Cléo Baras, Jean-Jacques Bascou,\\
-Christine Bolou-Chiaravalli, Anne-Sophie Capelle, Michel Gautero, Denis\\Genon-Catalot, Willy Guillemin, Said Hoceini, Fabrice Peyrard, Marie-Bernadette Piel} \\
-et {\em Emmanuel Viennet} (Président de l'ACD).
-\end{boitepagetitre}
-
-\end{center}
+%  PAGE DE GARDE OFFICIELLE EN PDF
+\includepdf[pages=1]{img/PN-BUT_Couverture_RT_2021.pdf}
 
 \clearpage
 % \RprerequislyceeAJ
