CCN: annexe A, presentation SAE, portfolio et PPP.

--- a/latex/pn_formation_ccn.tex
+++ b/latex/pn_formation_ccn.tex
@@ -185,19 +185,16 @@ Référentiel de formation}
 
 % XXX Inclure référentiel de compétences (5 parcours)
 
-% XXX Annexe A: tableau du semestre 1 et semestre 2
-% XXX avec heures et coefficients
-% XXX (pdf format paysage)
-% XXX 6 heures sur le projet de S2 => portfolio
+% Annexe A: tableau du semestre 1 et semestre 2
+\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S1.pdf}
+\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S2.pdf}
 
 % XXX Texte sur les SAE et le portfolio
-% XXX c'est un PDF (à repasser en texte)
+\input{intro-sae-porfolio}
 
 % XXX liste des SAE et ressources avec numéros de pages
 
 % XXX => ajouter à la fin le réf. d'évaluation
-
-% XXX => pied de page à changer
 
 % XXX => dans les exemples de SAE, supprimer "forme pédagogique"
 
