--- a/latex/modeles/tableau_exemple.tex
+++ b/latex/modeles/tableau_exemple.tex
@@ -45,26 +45,28 @@
 \hline
 \end{tabular}
 
-\begin{tabular}[t]{|P|T|}
-	\hline
-{ \setlength{\extrarowheight}{0pt}
-	\begin{tabular}[t]{@{}P@{}}
-	\textcolor{exempleC}{\bfseries Formes} \\
-	\textcolor{exempleC}{\bfseries pédagogiques} \\
-	\end{tabular}
-}
-& \tableauChampLong{\csname ESformes\EXEMPLE\endcsname} \\
-\hline
-{ \setlength{\extrarowheight}{0pt}
-	\begin{tabular}[t]{@{}P@{}}
-	\textcolor{exempleC}{\bfseries Modalités} \\
-	\textcolor{exempleC}{\bfseries d'évaluation} \\
-	\textcolor{exempleC}{\bfseries assurant l'acquisition} \\
-	\textcolor{exempleC}{\bfseries du niveau de} \\
-	\textcolor{exempleC}{\bfseries compétence visée} \\
-	\end{tabular}
-}
-& \tableauChampLong{\csname ESmodalite\EXEMPLE\endcsname} \\
-\hline
-\end{tabular}
+% CCN => suppression de la section "forme pédagogique"
+% \begin{tabular}[t]{|P|T|}
+% 	\hline
+% { \setlength{\extrarowheight}{0pt}
+% 	\begin{tabular}[t]{@{}P@{}}
+% 	\textcolor{exempleC}{\bfseries Formes} \\
+% 	\textcolor{exempleC}{\bfseries pédagogiques} \\
+% 	\end{tabular}
+% }
+% & \tableauChampLong{\csname ESformes\EXEMPLE\endcsname} \\
+% \hline
+% { \setlength{\extrarowheight}{0pt}
+% 	\begin{tabular}[t]{@{}P@{}}
+% 	\textcolor{exempleC}{\bfseries Modalités} \\
+% 	\textcolor{exempleC}{\bfseries d'évaluation} \\
+% 	\textcolor{exempleC}{\bfseries assurant l'acquisition} \\
+% 	\textcolor{exempleC}{\bfseries du niveau de} \\
+% 	\textcolor{exempleC}{\bfseries compétence visée} \\
+% 	\end{tabular}
+% }
+% & \tableauChampLong{\csname ESmodalite\EXEMPLE\endcsname} \\
+% \hline
+% \end{tabular}
+
 }
