--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -3,17 +3,17 @@
  & & \multicolumn{3}{c|}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
- & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+ & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
 \hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1}} - Administrer les réseaux et l'Internet\\ 
  \small Niveau 1 - Assister l'administrateur du réseau
 \end{tabular}
 }
- & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+ & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
 \hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2}} - Connecter les entreprises et les usagers\\ 
  \small Niveau 1 - Découvrir les transmissions et la ToIP
 \end{tabular}
 }
- & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+ & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
 \hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3}} - Créer des outils et applications informatiques pour les R\&T\\ 
  \small Niveau 1 - S'intégrer dans un service informatique
 \end{tabular}
