CCN: ajout phrase en fin d'intro.

--- a/latex/pn_formation_ccn.tex
+++ b/latex/pn_formation_ccn.tex
@@ -170,8 +170,15 @@ Référentiel de formation}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% PRESENTATION FORMATION     %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{La formation BUT R\'eseaux \& T\'el\'ecommunications et ses parcours}
+\section{La formation BUT Réseaux \& Télécommunications et ses parcours}
+{
+    \setlength{\parindent}{0cm}
+    \setlength{\parskip}{1ex}
 \input{presentation_formation.tex}
+
+\bigskip
+Ce document présente le programme national du BUT Réseaux \& Télécommunications et complète l'annexe 1 de l’arrêté relatif aux programmes nationaux de la licence professionnelle-bachelor universitaire de technologie.
+}
 
 % CCN: Inclure référentiel de compétences (5 parcours)
 \includepdf[landscape,pages=-]{img/RT_BUT_Competences_Parcours_Cybersecurite_V.pdf}
