Nettoyage preambule, qq typos.

--- a/latex/pn_formation_ccn.tex
+++ b/latex/pn_formation_ccn.tex
@@ -1,15 +1,6 @@
 \documentclass[10pt,lualatex,french]{article} 
+\usepackage{fontspec}
 \usepackage{helvet}
-
-%\usepackage{fontspec}
-%\setmainfont[Path=fonts/,
-%    BoldItalicFont=ArialBoldItalic.ttf,
-%    BoldFont      =ArialBold.ttf,
-%    ItalicFont    =ArialItalic.ttf]{ArialRegular.ttf}
-
-
-%\usepackage[LUC,T2A,T1]{fontenc}%
-%\usepackage[utf8]{inputenc}
 
 \usepackage{arevtext}
 \usepackage{tgtermes} % tgadventor} % https://tug.org/FontCatalogue/seriffonts.html
@@ -40,10 +31,8 @@
 \usepackage{xspace}
 \usepackage{pdfpages}
 
-%\usepackage[french]{babel}
-\usepackage[base]{babel}
-\usepackage{polyglossia}
-\setdefaultlanguage{french}
+\usepackage[french]{babel}
+
 \usepackage{csquotes}
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
