--- a/latex/presentation_formation.tex
+++ b/latex/presentation_formation.tex
@@ -1,17 +1,17 @@
-La formation de Bachelor Universitaire de Technologie en Réseaux \& Télécommunications  (BUT R\&T) répond à la demande toujours croissante de compétences dans les secteurs  des technologies de l'information et de la communication. Les réseaux informatiques sont au cœur de nombreuses activités dont l'importance pour la vie sociale et économique est chaque jour plus présente : télétravail, communications mobiles, réseaux à très haut débit, transport et accès à l'information. Ces technologies, en pleine évolution, impliquent des objets communicants  de plus en plus répandus tant chez les particuliers que dans les entreprises ({\em Internet des objets}). Elles génèrent d'importants flux de données et posent de nouveaux problèmes de {\em cybersécurité}. La plupart des entreprises déportent tout ou partie de leurs données et traitements vers des {\em data centers} et mobilisent des solutions de {\em cloud computing}. Le déploiement d'infrastructures et de services réseaux ou le suivi de leur évolution sont au cœur de projets d'envergure à gérer et {\em piloter}.  Le BUT R\&T forme en trois ans des techniciens supérieurs capables de comprendre, de mettre en œuvre, de  configurer et de maintenir des équipements et systèmes d'information, tout en assurant leur sécurité physique et logicielle. 
+La formation de Bachelor Universitaire de Technologie en Réseaux \& télécommunications  (BUT R\&T) répond à la demande toujours croissante de compétences dans les secteurs  des technologies de l'information et de la communication. Les réseaux informatiques sont au cœur de nombreuses activités dont l'importance pour la vie sociale et économique est chaque jour plus présente : télétravail, communications mobiles, réseaux à très haut débit, transport et accès à l'information. Ces technologies, en pleine évolution, impliquent des objets communicants  de plus en plus répandus tant chez les particuliers que dans les entreprises ({\em Internet des objets}). Elles génèrent d'importants flux de données et posent de nouveaux problèmes de {\em cybersécurité}. La plupart des entreprises déportent tout ou partie de leurs données et traitements vers des {\em data centers} et mobilisent des solutions de {\em cloud computing}. Le déploiement d'infrastructures et de services réseaux ou le suivi de leur évolution sont au cœur de projets d'envergure à gérer et {\em piloter}.  Le BUT R\&T forme en trois ans des techniciens supérieurs capables de comprendre, de mettre en œuvre, de  configurer et de maintenir des équipements et systèmes d'information, tout en assurant leur sécurité physique et logicielle. 
 
 \subsection*{Cinq parcours de spécialité}
-La formation repose sur un socle commun de compétences dans les domaines réseaux, informatiques et télécommunications. Ce socle, représentant plus de 80\% de la formation, couvre l'administration des réseaux IP (Internet), la connexion des entreprises et des usagers, la création d'outils et d'applications informatiques pour les réseaux et télécommunications. Il est complété par une spécialisation sous forme de compétences complémentaires dispensées au cours des deux dernières années ; cette spécialisation est à choisir parmi les cinq orientations professionnelles en R\&T : Cybersécurité, Développement système et cloud, Internet des objets et mobilité, Pilotage de projets réseaux, Réseaux opérateurs et multimédia. En plus des compétences scientifiques et techniques, le BUT R\&T met l'accent sur les savoir-être, l'éthique, la capacité à travailler en équipe dans un environnement international et la compréhension des enjeux des technologies modernes.
+La formation repose sur un socle commun de compétences dans les domaines réseaux, informatiques et télécommunications. Ce socle, représentant plus de 80\% de la formation, couvre l'administration des réseaux IP (Internet), la connexion des entreprises et des usagers, la création d'outils et d'applications informatiques pour les réseaux et télécommunications. Il est complété par une spécialisation sous forme de compétences complémentaires dispensées au cours des deux dernières années ; cette spécialisation est à choisir parmi les cinq orientations professionnelles en R\&T : {\em Cybersécurité, Développement système et cloud, Internet des objets et mobilité, Pilotage de projets réseaux, Réseaux opérateurs et multimédia}. En plus des compétences scientifiques et techniques, le BUT R\&T met l'accent sur les savoir-être, l'éthique, la capacité à travailler en équipe dans un environnement international et la compréhension des enjeux des technologies modernes.
 
-\subsection*{Les fonctions du diplômé de BUT Réseaux \& Télécommunications}
-La formation dispensée dans les départements de la spécialité "Réseaux \& Télécommunications" permet au ou à la future diplômée d'exercer différentes activités professionnelles :
+\subsection*{Les fonctions du diplômé de BUT Réseaux \& télécommunications}
+La formation dispensée dans les départements de la spécialité «Réseaux \& télécommunications» permet au ou à la future diplômée d'exercer différentes activités professionnelles :
 
 \medskip
 \begin{itemize}[leftmargin=5ex]
 \item conception, installation, administration d'infrastructures et de services réseaux informatiques ;
-\item déploiement et administration de  solutions de télécommunications fixes ou mobiles et de systèmes de communi\-cations (ToIP, téléconférence, visio, chat, ...) ;
+\item déploiement et administration de  solutions de télécommunications fixes ou mobiles et de systèmes de communications (ToIP, téléconférence, visio, chat, ...) ;
 \item analyse, suivi, coordination des projets et leur valorisation ;
-déploiement et maintenance d'un système d'infor\-mation et de solutions logicielles, développement d'outils informatiques.
+déploiement et maintenance d'un système d'information et de solutions logicielles, développement d'outils informatiques.
 \end{itemize}
 
 \medskip
@@ -19,17 +19,17 @@ Ces activités peuvent être élargies, avec une  spécialisation vers :
 
 \medskip
 \begin{itemize}[leftmargin=5ex]
-	\item La coordination de la cybersécurité des systèmes d'information (Cybersécurité). Cette spécialité regroupe l'ensemble des métiers liés à la sécurité des systèmes d'information, de l'installation d'équipements de sécurité à leur surveillance. Le diplômé du parcours Cybersécurité sera capable d'administrer un système d'information sécurisé, de le superviser, de détecter et de parer aux attaques informatiques. Les diplômés exerceront les métiers de Technicien en cybersécurité, Technicien des réseaux d'entreprises, Technicien réseaux sécurisés, Technicien d'infrastructures sécurisées, Coordinateur cybersécurité des systèmes d'infor\-mation, Administrateur de solutions de sécurité, Auditeur de sécurité technique, Opérateur analyste SOC (Security Operation Center), Intégrateur de solutions de sécurité, Administrateur Data Center.
+	\item La coordination de la cybersécurité des systèmes d'information ({\em Cybersécurité}). Cette spécialité regroupe l'ensemble des métiers liés à la sécurité des systèmes d'information, de l'installation d'équipements de sécurité à leur surveillance. Le diplômé du parcours Cybersécurité sera capable d'administrer un système d'information sécurisé, de le superviser, de détecter et de parer aux attaques informatiques. Les diplômés exerceront les métiers de Technicien en cybersécurité, Technicien des réseaux d'entreprises, Technicien réseaux sécurisés, Technicien d'infrastructures sécurisées, Coordinateur cybersécurité des systèmes d'information, Administrateur de solutions de sécurité, Auditeur de sécurité technique, Opérateur analyste SOC (Security Operation Center), Intégrateur de solutions de sécurité, Administrateur Data Center.
 	
-	\item L'administration de réseaux programmables, pour le Cloud ou le DevOps (DevCloud). Les diplômés exerce\-ront les métiers de Technicien réseaux cloud, Administrateur cloud, Intégrateur cloud, intégrateur DevOps,\\
+	\item L'administration de réseaux programmables, pour le Cloud ou le DevOps ({\em DevCloud}). Les diplômés exerceront les métiers de Technicien réseaux cloud, Administrateur cloud, Intégrateur cloud, intégrateur DevOps,\\
 	Administrateur Réseaux Programmables, Administrateur Système \& Réseaux (DevOps, NetDevOps),\\
 	Technicien sécurité des systèmes cloud (DevSecOps), Administrateur de serveurs et de réseaux virtualisés.
 	
-	\item La communication entre objets mobiles et communicants, l'Internet des objets (IOM ).\\
+	\item La communication entre objets mobiles et communicants, l'Internet des objets ({\em IOM}).\\
 	Cette spécialité permettra de maîtriser les technologies de communication entre objets mobiles et communi\-cants : téléphones, véhicules, capteurs de toute nature. Les diplômés exerceront les métiers de Technicien de maintenance exploitation , Technicien de maintenance réseaux mobiles, Technicien télécom, Technicien support réseau mobile, \\
 	Intégrateur de réseaux mobiles, Superviseur de réseaux mobiles, Technicien support réseau mobile et IoT, Technicien audit liaison sans fil, Intégrateur de système de l’Internet des Objets, Administrateur de solutions web et mobiles, Intégrateur d’applications mobiles.
 	
-	\item Le pilotage et la direction d'activités réseaux et télécoms (PilPro). Cette spécialité permettra de comprendre les technologies des réseaux informatiques et de télécommunications afin de dialoguer avec les différents acteurs d’un projet ou d’un contrat. Elle permettra d’acquérir la capacité d’analyser, de suivre, coordonner puis de piloter les demandes internes et externes des entreprises, organismes privés ou publics, dans le respect des normes techniques et réglementaires de son activité. Les diplômés exerceront les métiers de Responsable d'affaires clients, Conducteur de travaux (cuivre, fibre ou mobile), Technicien avant-vente, Technicien de production, Coordinateur de projet R\&T, Chargé d’études télécoms, Pilote d’activités réseaux et télécoms, Pilote de production réseaux.
+	\item Le pilotage et la direction d'activités réseaux et télécoms ({\em PilPro}). Cette spécialité permettra de comprendre les technologies des réseaux informatiques et de télécommunications afin de dialoguer avec les différents acteurs d’un projet ou d’un contrat. Elle permettra d’acquérir la capacité d’analyser, de suivre, coordonner puis de piloter les demandes internes et externes des entreprises, organismes privés ou publics, dans le respect des normes techniques et réglementaires de son activité. Les diplômés exerceront les métiers de Responsable d'affaires clients, Conducteur de travaux (cuivre, fibre ou mobile), Technicien avant-vente, Technicien de production, Coordinateur de projet R\&T, Chargé d’études télécoms, Pilote d’activités réseaux et télécoms, Pilote de production réseaux.
 	
-	\item Les opérateurs de télécommunication fixe et intégrateurs de solutions de communication pour l'entreprise (ROM). Cette spécialité forme aux métiers des opérateurs de télécommunication fixe qui fournissent l'accès au réseau pour les entreprises ou les particuliers et aux métiers d'intégrateur de solutions de communication pour l'entreprise. Les diplômés exerceront les métiers de Technicien d’intervention client boucle locale, Technicien support réseaux fixes, Chargé de support technique, Technicien service client SAV, Superviseur ADSL/FTTH, Technicien production et d'intégration de solutions complexes, Technicien déploiement de la fibre optique, Pilote de production, Chargé d'ingénierie réseau structurant, Technicien d’intervention ToIP.
+	\item Les opérateurs de télécommunication fixe et intégrateurs de solutions de communication pour l'entreprise ({\em ROM}). Cette spécialité forme aux métiers des opérateurs de télécommunication fixe qui fournissent l'accès au réseau pour les entreprises ou les particuliers et aux métiers d'intégrateur de solutions de communication pour l'entreprise. Les diplômés exerceront les métiers de Technicien d’intervention client boucle locale, Technicien support réseaux fixes, Chargé de support technique, Technicien service client SAV, Superviseur ADSL/FTTH, Technicien production et d'intégration de solutions complexes, Technicien déploiement de la fibre optique, Pilote de production, Chargé d'ingénierie réseau structurant, Technicien d’intervention ToIP.
 \end{itemize}
