option --ccn sur generation LaTeX. Supprime liens vers pages competences.

--- a/latex/modeles/tableau_sae.tex
+++ b/latex/modeles/tableau_sae.tex
@@ -72,11 +72,14 @@
 \hline
 \multicolumn{3}{|c|}{\textcolor{saeC}{\bfseries Compétence(s) ciblée(s), coefficient(s) et apprentissage(s) critique(s) couvert(s)}} \\
 \hline
-	\hyperlink{comp:RT1}{\textcolor{compCA}{\csname Scomp\CODE A\endcsname}} {\csname Sniveau\CODE A\endcsname}
+	% \hyperlink{comp:RT1}
+	{\textcolor{compCA}{\csname Scomp\CODE A\endcsname}} {\csname Sniveau\CODE A\endcsname}
 	&
-	\hyperlink{comp:RT2}{\textcolor{compCB}{\csname Scomp\CODE B\endcsname}} {\csname Sniveau\CODE B\endcsname}
+	% \hyperlink{comp:RT2}
+	{\textcolor{compCB}{\csname Scomp\CODE B\endcsname}} {\csname Sniveau\CODE B\endcsname}
 	&
-	\hyperlink{comp:RT3}{\textcolor{compCC}{\csname Scomp\CODE C\endcsname}} {\csname Sniveau\CODE C\endcsname}
+	% \hyperlink{comp:RT3}
+	{\textcolor{compCC}{\csname Scomp\CODE C\endcsname}} {\csname Sniveau\CODE C\endcsname}
 \\
 \hline
 	\ifcsdef{Scoeff\CODE A}{coef. {\csname Scoeff\CODE A\endcsname}}{} &
