--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -1,4 +1,5 @@
-\documentclass[10pt,lualatex,french]{article} 
+\documentclass[10pt,lualatex,french]{article}
+\usepackage{fontspec}
 \usepackage{helvet}
 
 %\usepackage{fontspec}
@@ -39,10 +40,8 @@
 \usepackage{fancyhdr}
 \usepackage{xspace}
 
-%\usepackage[french]{babel}
-\usepackage[base]{babel}
-\usepackage{polyglossia}
-\setdefaultlanguage{french}
+\usepackage[french]{babel}
+
 \usepackage{csquotes}
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
