Matrices version CNESER + fix some links in ccn mode.

--- a/latex/pn_formation_ccn.tex
+++ b/latex/pn_formation_ccn.tex
@@ -164,9 +164,6 @@ Référentiel de formation}
     \setlength{\parindent}{0cm}
     \setlength{\parskip}{1ex}
 \input{presentation_formation.tex}
-
-\bigskip
-Ce document présente le programme national du BUT Réseaux \& Télécommunications et complète l'annexe 1 de l’arrêté relatif aux programmes nationaux de la licence professionnelle-bachelor universitaire de technologie.
 }
 
 % CCN: Inclure référentiel de compétences (5 parcours)
@@ -178,8 +175,8 @@ Ce document présente le programme national du BUT Réseaux \& Télécommunicati
 
 
 % Annexe A: tableau du semestre 1 et semestre 2
-\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S1.pdf}
-\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S2.pdf}
+\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S1-CNESER.pdf}
+\includepdf[pages=1, landscape]{img/ANNEXE-A-RT-S2-CNESER.pdf}
 
 % Texte sur les SAE et le portfolio
 \input{intro-sae-porfolio}
