--- a/latex/presentation_formation.tex
+++ b/latex/presentation_formation.tex
@@ -1,3 +1,7 @@
+Ce document présente le programme national du BUT Réseaux \& Télécommunications et complète l'annexe 1 de l’arrêté relatif aux programmes nationaux de la licence professionnelle-bachelor universitaire de technologie.
+
+\bigskip
+
 La formation de Bachelor Universitaire de Technologie en Réseaux \& télécommunications  (BUT R\&T) répond à la demande toujours croissante de compétences dans les secteurs  des technologies de l'information et de la communication. Les réseaux informatiques sont au cœur de nombreuses activités dont l'importance pour la vie sociale et économique est chaque jour plus présente : télétravail, communications mobiles, réseaux à très haut débit, transport et accès à l'information. Ces technologies, en pleine évolution, impliquent des objets communicants  de plus en plus répandus tant chez les particuliers que dans les entreprises ({\em Internet des objets}). Elles génèrent d'importants flux de données et posent de nouveaux problèmes de {\em cybersécurité}. La plupart des entreprises déportent tout ou partie de leurs données et traitements vers des {\em data centers} et mobilisent des solutions de {\em cloud computing}. Le déploiement d'infrastructures et de services réseaux ou le suivi de leur évolution sont au cœur de projets d'envergure à gérer et {\em piloter}.  Le BUT R\&T forme en trois ans des techniciens supérieurs capables de comprendre, de mettre en œuvre, de  configurer et de maintenir des équipements et systèmes d'information, tout en assurant leur sécurité physique et logicielle. 
 
 \subsection*{Cinq parcours de spécialité}
@@ -21,13 +25,9 @@ Ces activités peuvent être élargies, avec une  spécialisation vers :
 \begin{itemize}[leftmargin=5ex]
 	\item La coordination de la cybersécurité des systèmes d'information ({\em Cybersécurité}). Cette spécialité regroupe l'ensemble des métiers liés à la sécurité des systèmes d'information, de l'installation d'équipements de sécurité à leur surveillance. Le diplômé du parcours Cybersécurité sera capable d'administrer un système d'information sécurisé, de le superviser, de détecter et de parer aux attaques informatiques. Les diplômés exerceront les métiers de Technicien en cybersécurité, Technicien des réseaux d'entreprises, Technicien réseaux sécurisés, Technicien d'infrastructures sécurisées, Coordinateur cybersécurité des systèmes d'information, Administrateur de solutions de sécurité, Auditeur de sécurité technique, Opérateur analyste SOC (Security Operation Center), Intégrateur de solutions de sécurité, Administrateur Data Center.
 	
-	\item L'administration de réseaux programmables, pour le Cloud ou le DevOps ({\em DevCloud}). Les diplômés exerceront les métiers de Technicien réseaux cloud, Administrateur cloud, Intégrateur cloud, intégrateur DevOps,\\
-	Administrateur Réseaux Programmables, Administrateur Système \& Réseaux (DevOps, NetDevOps),\\
-	Technicien sécurité des systèmes cloud (DevSecOps), Administrateur de serveurs et de réseaux virtualisés.
+	\item L'administration de réseaux programmables, pour le Cloud ou le DevOps ({\em DevCloud}). Les diplômés exerceront les métiers de Technicien réseaux cloud, Administrateur cloud, Intégrateur cloud, intégrateur DevOps,Administrateur Réseaux Programmables, Administrateur Système \& Réseaux (DevOps, NetDevOps), Technicien sécurité des systèmes cloud (DevSecOps), Administrateur de serveurs et de réseaux virtualisés.
 	
-	\item La communication entre objets mobiles et communicants, l'Internet des objets ({\em IOM}).\\
-	Cette spécialité permettra de maîtriser les technologies de communication entre objets mobiles et communi\-cants : téléphones, véhicules, capteurs de toute nature. Les diplômés exerceront les métiers de Technicien de maintenance exploitation , Technicien de maintenance réseaux mobiles, Technicien télécom, Technicien support réseau mobile, \\
-	Intégrateur de réseaux mobiles, Superviseur de réseaux mobiles, Technicien support réseau mobile et IoT, Technicien audit liaison sans fil, Intégrateur de système de l’Internet des Objets, Administrateur de solutions web et mobiles, Intégrateur d’applications mobiles.
+	\item La communication entre objets mobiles et communicants, l'Internet des objets ({\em IOM}). Cette spécialité permettra de maîtriser les technologies de communication entre objets mobiles et communi\-cants : téléphones, véhicules, capteurs de toute nature. Les diplômés exerceront les métiers de Technicien de maintenance exploitation , Technicien de maintenance réseaux mobiles, Technicien télécom, Technicien support réseau mobile, Intégrateur de réseaux mobiles, Superviseur de réseaux mobiles, Technicien support réseau mobile et IoT, Technicien audit liaison sans fil, Intégrateur de système de l’Internet des Objets, Administrateur de solutions web et mobiles, Intégrateur d’applications mobiles.
 	
 	\item Le pilotage et la direction d'activités réseaux et télécoms ({\em PilPro}). Cette spécialité permettra de comprendre les technologies des réseaux informatiques et de télécommunications afin de dialoguer avec les différents acteurs d’un projet ou d’un contrat. Elle permettra d’acquérir la capacité d’analyser, de suivre, coordonner puis de piloter les demandes internes et externes des entreprises, organismes privés ou publics, dans le respect des normes techniques et réglementaires de son activité. Les diplômés exerceront les métiers de Responsable d'affaires clients, Conducteur de travaux (cuivre, fibre ou mobile), Technicien avant-vente, Technicien de production, Coordinateur de projet R\&T, Chargé d’études télécoms, Pilote d’activités réseaux et télécoms, Pilote de production réseaux.
 	
