--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -48,7 +48,7 @@
 
 \\ 
 \hline 
-\multicolumn{21}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
+\multicolumn{21}{|l|}{{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\\\hline 
 \textcolor{compCA}{AC0111} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
  &  &  & $\times$ & $\times$
@@ -80,7 +80,7 @@ $\times$ &  &  & $\times$ & $\times$
  & $\times$ & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \hline 
-\multicolumn{21}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
+\multicolumn{21}{|l|}{{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\\\hline 
 \textcolor{compCB}{AC0211} & 
 \begin{tabular}{p{3.8cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
  & $\times$ &  & $\times$ & $\times$
@@ -107,7 +107,7 @@ $\times$ &  &  & $\times$ & $\times$
  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \hline 
-\multicolumn{21}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
+\multicolumn{21}{|l|}{{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{21}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\\\hline 
 \textcolor{compCC}{AC0311} & 
 \begin{tabular}{p{3.8cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
  &  & $\times$ & $\times$ & $\times$
